2006-01-21 [colin]	1.9.100cvs177

	* po/fr.po
		In French "Composition" puts the Compose toolbar's prefs in the wrong place

2006-01-20 [colin]	1.9.100cvs176

	* configure.ac
	* Makefile.am
	* manual/Makefile
	* manual/dist/html/.cvsignore
	* manual/dist/html/Makefile.am
	* manual/dist/pdf/.cvsignore
	* manual/dist/pdf/Makefile.am
	* manual/dist/ps/.cvsignore
	* manual/dist/ps/Makefile.am
	* manual/dist/txt/.cvsignore
	* manual/dist/txt/Makefile.am
		Autotool-ize manual

2006-01-20 [paul]	1.9.100cvs175

	* manual/handling.xml
		make Filtering and Searching entries easier to find
	* manual/keyboard.xml
		add the remaining default keybinds
	* src/prefs_summaries.c
		update the default keybinds

2006-01-20 [paul]	1.9.100cvs174

	* src/addressbook.c
	* src/addrgather.c
	* src/addrharvest.c
	* src/editaddress.c
	* src/editgroup.c
	* src/exphtmldlg.c
	* src/expldifdlg.c
	* src/exporthtml.c
	* src/exportldif.c
	* src/ldif.c
		replace 'e-mail' with 'email'
	* src/summary_search.c
		add mnemonic to "Find all" button

2006-01-20 [wwp]	1.9.100cvs173

	* src/export.c
	* src/import.c
		touched mbox import/export buttons for HIG-compliance

2006-01-19 [paul]	1.9.100cvs172

	* manual/account.xml
	* manual/addrbook.xml
	* manual/advanced.xml
	* manual/faq.xml
	* manual/handling.xml
	* manual/intro.xml
	* manual/plugins.xml
	* manual/starting.xml
		more editing

2006-01-19 [paul]	1.9.100cvs171

	* src/toolbar.c
		allow use of trash button while receiving
		Thanks to Colin

2006-01-19 [wwp]	1.9.100cvs170

	* src/gtk/quicksearch.c
	* src/compose.c
		force text color to black when yellow background is set

2006-01-19 [colin]	1.9.100cvs169

	* src/plugins/trayicon/trayicon.c
		Gray out Get Mail when already getting mail

2006-01-18 [paul]	1.9.100cvs168

	* src/compose.c
		give widget yellow background was To is
		set via folder prefs
	* src/gtk/quicksearch.c
		give widget yellow background when quick
		search is active.
		Thanks to Colin

2006-01-18 [paul]	1.9.100cvs167
