@@ -1161,3 +1161,4 @@
 ( cvs diff -u -r 1.1.2.4 -r 1.1.2.5 manual/handling.xml;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 manual/keyboard.xml;  cvs diff -u -r 1.1.2.18 -r 1.1.2.19 src/prefs_summaries.c;  ) > 1.9.100cvs175.patchset
 ( cvs diff -u -r 1.654.2.1205 -r 1.654.2.1206 configure.ac;  cvs diff -u -r 1.24.2.12 -r 1.24.2.13 Makefile.am;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 manual/Makefile;  diff -u /dev/null manual/dist/html/.cvsignore;  diff -u /dev/null manual/dist/html/Makefile.am;  diff -u /dev/null manual/dist/pdf/.cvsignore;  diff -u /dev/null manual/dist/pdf/Makefile.am;  diff -u /dev/null manual/dist/ps/.cvsignore;  diff -u /dev/null manual/dist/ps/Makefile.am;  diff -u /dev/null manual/dist/txt/.cvsignore;  diff -u /dev/null manual/dist/txt/Makefile.am;  ) > 1.9.100cvs176.patchset
 ( cvs diff -u -r 1.42.2.18 -r 1.42.2.19 po/fr.po;  ) > 1.9.100cvs177.patchset
+( cvs diff -u -r 1.3.2.37 -r 1.3.2.38 src/prefs_themes.c;  ) > 1.9.100cvs178.patchset
